--- a/Web/admin.html
+++ b/Web/admin.html
@@ -6,375 +6,158 @@
     <title>Administrador</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/adminform.css">
+    <link rel="stylesheet" href="css/admin.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
     <script>
-      $(document).ready(function()
-      {
-        var first = true;
-
-        // Hide menu once we know its width
-        $('#editarbonos').click(function()
+        //Function to log in o sqlserver
+        function consultar()
         {
-          var $menu = $('.bonosMenu');
-          if ($menu.is(':visible'))
-          {
-              // Slide away
-            $menu.animate({left: -($menu.outerWidth() + 10)}, function() {$menu.hide();});
-          }
-          else
-          {
-              // Slide in
-            $menu.show().css("left", -($menu.outerWidth() + 10)).animate({left: 0});
-          }});
-
-        // Hide menu once we know its width
-        $('#editardeducciones').click(function()
-        {
-          var $menu = $('.deduccionesMenu');
-          if ($menu.is(':visible'))
-          {
-              // Slide away
-            $menu.animate({left: -($menu.outerWidth() + 10)}, function() {$menu.hide();});
-          }
-          else
-          {
-              // Slide in
-            $menu.show().css("left", -($menu.outerWidth() + 10)).animate({left: 0});
-          }});
-
-        // Hide menu once we know its width
-        $('#editarvalor').click(function()
-        {
-          var $menu = $('.valorMenu');
-          if ($menu.is(':visible'))
-          {
-              // Slide away
-            $menu.animate({left: -($menu.outerWidth() + 10)}, function() {$menu.hide();});
-          }
-          else
-          {
-              // Slide in
-            $menu.show().css("left", -($menu.outerWidth() + 10)).animate({left: 0});
-          }});
-      });
-    </script>
-    <script>
-    //Function query the deductions of a worker
-    function deductionsQuery()
-    {
-      $.ajax
-      (
-        {
-          dataType: 'json',
-          data: ({functionID: 2, valorDocID: document.getElementById('deductionsSearch').value}), // What html is going to send to php
-          url: "http://localhost/WorkerFormWeb/conexion.php", // The .php which recives petition
-          type:  'post', // post method
-          success:  function (response)
-          {
-            // processing php response
-            $("#resultado").html(response);
-            if(response == 1)
-            {
-              // worker();
-              alert(response);
-            }
-            else
-            {
-              alert("Su identificación no coincide con la de ningún trabajador");
-            }
-          }
+            $.ajax
+            (
+                {
+                    data:  $("#formulario").serialize(), //lo que se va a enviar
+                    url: "http://localhost/workerform/conexion.php", // The .php which recives petition
+                    type:  'post', // post method
+                    success:  function (response)
+                    {
+                        // processing php response
+                        // $("#resultado").html(response);
+                        alert("El response es : " + response);
+                        if(response !== "")
+                        {
+                            // alert(resonse);
+                        }
+                        else
+                        {
+                            alert("Su identificación no coincide con la de ningún trabajador");
+                        }
+                    }
+                }
+            );
         }
-      );
-    }
     </script>
-    <script>
-    //Function query the deductions of a worker
-    function bonusQuery()
-    {
-      $.ajax
-      (
-        {
-          dataType: 'json',
-          data: ({functionID: 3, valorDocID: document.getElementById('bonusSearch').value}), // What html is going to send to php
-          url: "http://localhost/WorkerFormWeb/conexion.php", // The .php which recives petition
-          type:  'post', // post method
-          success:  function (response)
+      <script>
+          function generalEdit()
           {
-            // processing php response
-            $("#resultado").html(response);
-            if(response == 1)
-            {
-              // worker();
-              alert(response);
-            }
-            else
-            {
-              alert("La identificación no coincide con la de ningún trabajador");
-            }
-          }
-        }
-      );
-    }
-    </script>
-    <script>
-    //Function query the deductions of a worker
-    function valuexHourQuery()
-    {
-      $.ajax
-      (
-        {
-          dataType: 'json',
-          data: ({functionID: 4, valorDocID: document.getElementById('valueSearch').value}), // What html is going to send to php
-          url: "http://localhost/WorkerFormWeb/conexion.php", // The .php which recives petition
-          type:  'post', // post method
-          success:  function (response)
-          {
-            // processing php response
-            $("#resultado").html(response);
-            if(response == 1)
-            {
-              // worker();
-              alert(response);
-            }
-            else
-            {
-              alert("La identificación no coincide con la de ningún trabajador");
-            }
-          }
-        }
-      );
-    }
-    </script>
+              $.ajax
+              (
+                  {
+                      data:  $("#formulario").serialize(), //lo que se va a enviar
+                      url: "http://localhost/workerform/conexion.php", // The .php which recives petition
+                      type:  'post', // post method
+                      success:  function (response)
+                      {
+                          // processing php response
+                          // $("#resultado").html(response);
+                            alert(response);
+                          if(response == 1)
+                          {
+                              window.open("http://localhost/workerform/empleado.html","_self")
+                          }
+                          else if(response == 2)
+                          {
+                              window.open("http://localhost/workerform/admin.html","_self")
 
+                          }
+                          else
+                          {
+                              alert("Por favor verifique su identificación, no coincide con ninguna en la empresa");
+                          }
+                      }
+                  }
+              );
+          }
+      </script>
   <body>
 
   <div class="container-fluid bg-dark py-2">
     <div class="container text-white">
-      <h3>Trabajadores</h3>
-      <p>Se pueden hacer depositos, "retirar" dinero, consultar estados de cuenta y ver información de la cuenta.</p>
+      <h3>Administradores</h3>
+      <p>Se pueden editar bonos, deducciones y el valor por hora de un usuario.</p>
     </div>
     <hr class="bg-white">
   </div>
 
-
-  // Hidden menus
-  <div class="container-fluid py-5 text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <div id="editardeducciones">
-          Editar deducción
-        </div>
-        <div class="deduccionesMenu" style="display: none; position: relative;">
-
-          <div class="col-10">
-            <label for="">Identificador:</label>
-            <input type="text" class="form-control" id="employee">
-            <label for="">Empleado:</label>
-            <input type="text" class="form-control" id="employee">
-            <label for="usr">Tipo de deducción:</label>
-            <input type="text" class="form-control" name="addressee" id="addressee">
-            <label for="usr">Monto:</label>
-            <input type="text" class="form-control" name="moneyPush" id="moneyPush">
-            <br>
-            <button type="button" class="btn btn-outline-success my-2 my-sm-0">Editar</button>
-          </div>
-
-        </div>
-      </div>
-      <div class="col-4">
-        <div id="editarbonos">
-          Editar bono
-        </div>
-        <div class="bonosMenu" style="display: none; position: relative;">
-          <div class="col-10">
-            <label for="">Tipo de movimiento:</label>
-            <input type="text" class="form-control" name="movType" id="movType" onkeypress="return valida(event)">
-            <label for="usr">Destinatario:</label>
-            <input type="text" class="form-control" name="addressee" id="addressee">
-            <label for="usr">Monto:</label>
-            <input type="text" class="form-control" name="moneyPush" id="moneyPush" onkeypress="return valida(event)">
-            <br>
-            <button type="button" class="btn btn-outline-success my-2 my-sm-0">Depositar</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div id="editarvalor">
-          Editar valor por hora
-        </div>
-        <div class="valorMenu" style="display: none; position: relative;">
-
-          <div class="col-10">
-            <label for="">Tipo de movimiento:</label>
-            <input type="text" class="form-control" name="movType" id="movType" onkeypress="return valida(event)">
-            <label for="usr">Destinatario:</label>
-            <input type="text" class="form-control" name="addressee" id="addressee">
-            <label for="usr">Monto:</label>
-            <input type="text" class="form-control" name="moneyPush" id="moneyPush" onkeypress="return valida(event)">
-            <br>
-            <button type="button" class="btn btn-outline-success my-2 my-sm-0">Depositar</button>
-          </div>
-
-        </div>
-      </div>
-    </div>
+  <form method="post" id="formulario">
 
     <div class="container-fluid py-5 text-white">
     <div class="container">
       <div class="row">
-        <div class="col-4">
-          <label>Tabla de deducciones por empleado</label>
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Identificación" aria-label="Search" id="deductionsSearch">
-            <button class="btn btn-outline-success my-2 my-sm-0" onclick="deductionsQuery();">Buscar</button>
-          </form>
-          <br>
-          <div style=""  class="table-wrapper-scroll-y">
-            <table id="dtVerticalScrollExample" class="table table-striped table-bordered table-dark" cellspacing="0" width="100%">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Empleado</th>
-                  <th scope="col">Tipo</th>
-                  <th scope="col">Monto</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-                <tr>
-                  <th scope="row">4</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">5</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">6</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
-            </table>
 
-          </div>
-        </div>
-        <div class="col-4">
-          <label>Tabla de bonos por empleado</label>
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Identificación" aria-label="Search" id="bonusSearch">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="bonusQuery();">Buscar</button>
-          </form>
-          <br>
-          <div style=""  class="table-wrapper-scroll-y">
-            <table class="table table-striped table-bordered table-dark" cellspacing="0" width="100%">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Empleado</th>
-                  <!-- <th scope="col">Tipo</th> -->
-                  <th scope="col">Fecha</th>
-                  <th scope="col">Monto</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-                <tr>
-                  <th scope="row">4</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">5</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">6</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-4">
-          <label>Tabla de valor por hora de empleado</label>
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Identificación" aria-label="Search" id="valueSearch">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="valuexHourQuery();">Buscar</button>
-          </form>
-          <br>
-          <div style=""  class="table-wrapper-scroll-y">
-            <table class="table table-striped table-bordered table-dark" cellspacing="0" width="100%">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Empleado</th>
-                  <!-- <th scope="col">Tipo</th> -->
-                  <th scope="col">Valor por hora</th>
-                  <!-- <th scope="col">monto</th> -->
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                </tr>
-
-              </tbody>
-            </table>
-
-          </div>
         </div>
       </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <label for="deductionsTextArea">Posible deducción a editar</label>
+                    <textarea name="name" rows="8" cols="30" id="deductionsTextArea"></textarea>
+                </div>
+                <div class="col-4">
+                    <label for="bonusTextArea">Posible bono a editar</label>
+                    <textarea name="name" rows="8" cols="30" id="bonusTextArea"></textarea>
+                    <br>
+                    <label>
+                        <input type="text" class="form-control" name="valorDocIDQuery">
+                    </label>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="consultar();">Buscar</button>
+
+                </div>
+                <div class="col-4">
+                    <label for="valueTextArea">Valor por hora de empleado</label>
+                    <textarea name="name" rows="8" cols="30" id="valueTextArea"></textarea>
+                    <br>
+
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+  <div class="container-fluid py-5 text-white">
+          <div class="container">
+              <div class="row">
+
+              </div>
+          </div>
+          <div class="container">
+              <div class="row">
+                  <div class="col-3">
+                      <label >Editar deducción</label>
+                      <input type="text" class="form-control" placeholder="Identificador" name="idDeduction">
+                      <br>
+                      <input type="text" class="form-control" placeholder="Monto" name="deductionAmount">
+
+                  </div>
+                  <div class="col-1">
+
+                  </div>
+                  <div class="col-3 col-md-offset-5">
+                      <label >Editar bono</label>
+                      <input type="text" class="form-control" placeholder="Id empleado" name="idBonus">
+                      <br>
+                      <input type="text" class="form-control" placeholder="Monto" name="bonusAmount">
+                      <br>
+                      <button type="button" class="btn btn-primary" onclick="generalEdit();">Editar</button>
+                  </div>
+                  <div class="col-1">
+
+                  </div>
+                  <div class="col-3">
+                      <label >Editar valor por hora</label>
+                      <input type="text" class="form-control" placeholder="Id empleado" name="idEmployeeValue">
+                      <br>
+                      <input type="text" class="form-control" placeholder="Nuevo valor" name="valueEmployee">
+                      <br>
+
+                  </div>
+              </div>
+          </div>
+
+
+      </div>
+
+  </form>
   </body>
 </html>
