--- a/Web/empleado.html
+++ b/Web/empleado.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Empleado</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/admin.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="">
+    <script>
         function consultJob()
         {
             $.ajax
@@ -21,16 +23,10 @@
                     success:  function (response)
                     {
                         // processing php response
-                        // $("#resultado").html(response);
-                          alert(response);
-                        if(response == 1)
-                        {
-                            window.open("http://localhost/workerform/empleado.html","_self")
-                        }
-                        else if(response == 2)
-                        {
-                            window.open("http://localhost/workerform/admin.html","_self")
-
+                        // $("bonusTextArea").html(response);/
+                        // alert(response);
+                        if(response != "") {
+                            document.getElementById('bonusTextArea').value=response;
                         }
                         else
                         {
@@ -50,42 +46,30 @@
         </div>
         <hr class="bg-white">
     </div>
-    <form method="post" id="formulario">
-
-        <div class="container-fluid py-5 text-white">
-            <div class="container-fluid py-5 text-white">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3">
-                            <!--<label for="deductionsTextArea">Posible deducción a editar</label>-->
-                            <!--<textarea name="name" rows="8" cols="30" id="deductionsTextArea"></textarea>-->
-                        </div>
-                        <div class="col-6">
-                            <label for="bonusTextArea">Vida laboral del trabajador</label>
-                            <br>
-                            <textarea name="name" rows="8" cols="52" id="bonusTextArea"></textarea>
-                            <br>
-                            <label>
-                                <input type="text" class="form-control" placeholder="Identificación" name="idemployeeJob">
-                            </label>
-                            <label>
-                                <input type="text" class="form-control" placeholder="Fecha" name="valorDocIDQuery">
-                            </label>
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="consultJob();">Buscar</button>
-
-                        </div>
-                        <div class="col-3">
-                            <!--<label for="valueTextArea">Valor por hora de empleado</label>-->
-                            <!--<textarea name="name" rows="8" cols="30" id="valueTextArea"></textarea>-->
-                            <!--<br>-->
-
-                        </div>
-                    </div>
+    <div class="container-fluid py-5 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
                 </div>
-
-
+                <div class="col-6">
+                    <label for="bonusTextArea">Vida laboral del trabajador</label>
+                    <br>
+                    <textarea rows="8" cols="52" id="bonusTextArea"></textarea>
+                    <br>
+                    <form id="formulario" method="post">
+                        <label>
+                            <input type="text" placeholder="Identificación" name="idemployeeJob">
+                        </label>
+                        <label>
+                            <input type="text" class="" placeholder="Fecha" id="valorDocIDQuery">
+                        </label>
+                        <button type="button" class="btn btn-outline-success my-2 my-sm-0" onclick="consultJob();">Buscar</button>
+                    </form>
+                </div>
+                <div class="col-3">
                 </div>
             </div>
-    </form>
+        </div>
+    </div>
 </body>
 </html>
