--- a/Web/login.html
+++ b/Web/login.html
@@ -25,7 +25,7 @@
           {
             // processing php response
             // $("#resultado").html(response);
-            //   alert(response);
+              alert(response);
             if(response == 1)
             {
               window.open("http://localhost/workerform/empleado.html","_self")
